<resources>
    <string name="app_name">Coworking</string>

    <string name="currency">"\$"</string>
    <string name="no_price">"-.--"</string>

    <!-- Common -->
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="no_name">No name</string>
    <string name="no_room_name">No room name</string>


    <!-- Login -->
    <string name="title_login">Email</string>
    <string name="title_password">Password</string>
    <string name="button_login">Login</string>
    <string name="error_login_empty">Please enter your email</string>
    <string name="error_login_invalid">Please enter a valid email</string>
    <string name="error_password_empty">Please enter your password</string>

    <!-- Menu -->
    <string name="button_menu_buildings">Buildings</string>
    <string name="button_menu_managers">Managers</string>
    <string name="button_menu_payments">Payments</string>
    <string name="button_menu_residents">Residents</string>
    <string name="button_menu_rooms">Rooms</string>
    <string name="button_menu_building_dashboard">Building dashboard</string>
    <string name="button_menu_admin_dashboard">Admin dashboard</string>
    <string name="title_menu">Menu</string>

    <!-- Buildings -->
    <string name="title_buildings">Coworking spaces</string>
    <string name="button_add_building">Add new coworking</string>
    <string name="title_building_options">Building actions</string>
    <string name="option_building_edit">Edit building details</string>
    <string name="option_building_delete">Delete building</string>
    <string name="title_building_delete">Delete building</string>
    <string name="message_building_delete">Do you really want to delete building \"%s\"?</string>

    <!-- Create building -->
    <string name="title_create_building">Create new coworking</string>
    <string name="title_edit_building">Edit coworking</string>
    <string name="hint_building_name">Building name</string>
    <string name="hint_building_description">Description</string>
    <string name="hint_building_latitude">Latitude</string>
    <string name="hint_building_longitude">Longitude</string>
    <string name="hint_building_address">Address</string>
    <string name="hint_building_area">Building area</string>
    <string name="error_building_empty_name">Please enter a building name</string>
    <string name="error_building_invalid_latitude">Latitude is invalid</string>
    <string name="error_building_invalid_longitude">Longitude is invalid</string>
    <string name="error_building_invalid_area">Area is invalid</string>

    <!-- Rooms -->
    <string name="title_rooms">Coworking rooms</string>
    <string name="button_add_room">Add new room</string>
    <string name="title_room_options">Room actions</string>
    <string name="option_room_edit">Edit room information</string>
    <string name="option_room_delete">Delete room</string>
    <string name="title_room_delete">Delete room</string>
    <string name="message_room_delete">Do you really want to delete room \"%s\"?</string>
    <string name="message_has_board">Has board</string>
    <string name="message_no_board">No board</string>
    <string name="message_has_balcony">Has balcony</string>
    <string name="message_no_balcony">No balcony</string>
    <string name="room_type_private">Private room</string>
    <string name="room_type_open_space">Open space</string>
    <string name="room_type_unknown">Unknown room</string>

    <!-- Create room -->
    <string name="title_create_room">Create new room</string>
    <string name="title_edit_room">Edit coworking room</string>
    <string name="hint_room_name">Room name</string>
    <string name="hint_room_place_price">Price per place</string>
    <string name="hint_room_description">Description</string>
    <string name="title_room_type">Room type</string>
    <string name="hint_room_area">Room area</string>
    <string name="title_room_has_board">Has board</string>
    <string name="title_room_has_balcony">Has balcony</string>
    <string name="title_room_workplaces_count">Workplaces count</string>
    <string name="title_room_window_count">Window count</string>
    <string name="error_room_empty_name">Please enter a room name</string>
    <string name="error_room_empty_price">Please enter price per place</string>
    <string name="error_room_invalid_price">Please enter a valid price</string>
    <string name="error_room_invalid_area">Area is invalid</string>

    <!-- Managers -->
    <string name="title_managers">Managers</string>
    <string name="button_add_manager">Add new manager</string>
    <string name="title_manager_options">Manager actions</string>
    <string name="option_manager_edit">Edit manager information</string>
    <string name="option_manager_delete">Delete manager</string>
    <string name="title_manager_delete">Delete manager</string>
    <string name="message_manager_delete">Do you really want to delete \%s\ from the managers list?</string>

    <!-- Modify manager -->
    <string name="title_add_manager">Add new manager</string>
    <string name="title_edit_manager">Edit manager information</string>
    <string name="hint_manager_name">Name</string>
    <string name="hint_manager_surname">Surname</string>
    <string name="hint_manager_email">Contact email</string>
    <string name="hint_manager_password">Password</string>
    <string name="hint_manager_description">Description</string>
    <string name="hint_manager_building">Coworking</string>
    <string name="error_manager_empty_name">Please enter a manager name</string>
    <string name="error_manager_empty_surname">Please enter a manager surname</string>
    <string name="error_manager_empty_email">Please enter a manager email</string>
    <string name="error_manager_email_invalid">Please enter a valid email</string>
    <string name="error_manager_empty_password">Please enter a manager password</string>
    <string name="error_manager_password_invalid">Please enter a valid password</string>
    <string name="error_manager_empty_building">Please select an operation coworking</string>

    <!-- Residents -->
    <string name="title_residents">Residents</string>
    <string name="button_add_resident">Add new resident</string>
    <string name="title_resident_options">Resident actions</string>
    <string name="option_resident_edit">Edit resident information</string>
    <string name="option_resident_delete">Delete resident</string>
    <string name="title_resident_delete">Delete resident</string>
    <string name="message_resident_delete">Do you really want to delete resident \%s\?</string>

    <!-- Modify resident -->
    <string name="title_add_resident">Add new resident</string>
    <string name="title_edit_resident">Edit resident information</string>
    <string name="hint_resident_name">Name</string>
    <string name="hint_resident_surname">Surname</string>
    <string name="hint_resident_email">Contact email</string>
    <string name="hint_resident_description">Description</string>
    <string name="error_resident_empty_name">Please enter a resident name</string>
    <string name="error_resident_empty_surname">Please enter a resident surname</string>
    <string name="error_resident_empty_email">Please enter a resident email</string>
    <string name="error_resident_email_invalid">Please enter a valid email</string>

    <!-- Room tenants -->
    <string name="title_room_rentals">Room rentals</string>
    <string name="message_add_tenant">Add new tenant</string>
    <string name="title_remove_tenant">Remove tenant</string>
    <string name="message_remove_tenant">Are you sure to delete rental in this room of %s?</string>

    <!-- Search resident -->
    <string name="title_select_resident">Select a resident</string>
    <string name="hint_select_resident">Enter resident name</string>

    <!-- Transactions -->
    <string name="title_payments">Payments</string>
    <string name="button_new_transaction">New transaction</string>
    <string name="message_payment_private_room">Private room rental payment</string>
    <string name="message_payment_open_space">Workplace in open space payment</string>
    <string name="message_payment_unknown">Payment for some room</string>

    <!-- Create transaction -->
    <string name="title_create_payment">Create new payment</string>
    <string name="title_payment_month_count">Months count to pay for</string>
    <string name="hint_payment_select_resident">Select resident</string>
    <string name="hint_payment_select_rental">Select rental</string>
    <string name="hint_payment_enter_amount">Enter payment amount</string>
    <string name="error_payment_empty_resident">Please select a resident</string>
    <string name="error_payment_empty_rental">Please select a resident rental</string>
    <string name="logout">Logout</string>

    <plurals name="workplaces">
        <item quantity="zero">No workplaces</item>
        <item quantity="one">%d workplace</item>
        <item quantity="two">%d workplaces</item>
        <item quantity="other">%d workplaces</item>
    </plurals>

    <plurals name="windows">
        <item quantity="zero">No windows</item>
        <item quantity="one">%d window</item>
        <item quantity="two">%d windows</item>
        <item quantity="other">%d windows</item>
    </plurals>

</resources>