<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="ifContentScrolls">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/img_room_modify" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.Stroke"
            android:id="@+id/layoutInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_room_name"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Input.InLayout.Stroke"
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:nextFocusDown="@id/inputDescription"
                tools:text="Room name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.Stroke"
            android:id="@+id/layoutInputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_room_description"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Input.InLayout.Stroke"
                android:id="@+id/inputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="2"
                android:imeOptions="actionNext"
                android:nextFocusDown="@id/inputArea"
                tools:text="Room description" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Text.Accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title_room_type" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:weightSum="1"
            android:gravity="center_horizontal">

            <Button
                style="@style/Button.Outline"
                android:id="@+id/buttonRoomTypePrivate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:background="@drawable/selector_left_button_room_type_background"
                android:text="@string/room_type_private"
                android:textColor="@color/color_room_type_button_text" />

            <Button
                style="@style/Button.Outline"
                android:id="@+id/buttonRoomTypeOpenSpace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:background="@drawable/selector_right_button_room_type_background"
                android:text="@string/room_type_open_space"
                android:textColor="@color/color_room_type_button_text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp">

            <CheckBox
                style="@style/Text"
                android:id="@+id/checkBoxHasBoard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_room_has_board" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <CheckBox
                style="@style/Text"
                android:id="@+id/checkBoxHasBalcony"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_room_has_balcony"
                android:button="@null"
                android:drawableEnd="?android:attr/listChoiceIndicatorMultiple" />

        </LinearLayout>

        <TextView
            style="@style/Text.Accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_room_workplaces_count"
            android:layout_marginTop="12dp" />

        <com.flaringapp.coursework2021.presentation.utils.amountpicker.AmountPickerView
            android:id="@+id/pickerWorkplacesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal"
            app:amountMinValue="0"
            app:amountMaxValue="99" />

        <TextView
            style="@style/Text.Accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_room_window_count"
            android:layout_marginTop="12dp" />

        <com.flaringapp.coursework2021.presentation.utils.amountpicker.AmountPickerView
            android:id="@+id/pickerWindowCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center_horizontal"
            app:amountMinValue="0"
            app:amountMaxValue="99" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.Stroke"
            android:id="@+id/layoutInputArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/hint_room_area"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Input.InLayout.Stroke"
                android:id="@+id/inputArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"
                android:imeOptions="actionDone"
                tools:text="412 m2" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="24dp"
                android:clipToPadding="false">

                <Button
                    style="@style/Button"
                    android:id="@+id/buttonSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/submit" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>