<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        android:scaleType="fitCenter"
        android:src="@drawable/img_coworking" />

    <TextView
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/color_primary"
        android:textSize="32sp"
        android:text="@string/app_name" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputLayout"
        android:id="@+id/layoutInputLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:hintEnabled="true"
        android:hint="@string/title_login"
        app:errorEnabled="true"
        android:layout_marginTop="64dp">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Input.InLayout"
            android:id="@+id/inputLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/inputPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/InputLayout"
        android:id="@+id/layoutInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:hintEnabled="true"
        android:hint="@string/title_password"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Input.InLayout"
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/layoutLoading"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/color_primary"
            android:layout_gravity="center"
            android:visibility="invisible"
            tools:visibility="visible" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="48dp"
        android:gravity="center_horizontal"
        android:clipToPadding="false"
        android:weightSum="1">

        <Button
            style="@style/Button"
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/button_login" />

    </LinearLayout>

</LinearLayout>