<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/img_building_modify" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.Stroke"
            android:id="@+id/layoutInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_building_name"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Input.InLayout.Stroke"
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                tools:text="Building name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.Stroke"
            android:id="@+id/layoutInputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_building_description"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Input.InLayout.Stroke"
                android:id="@+id/inputDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="2"
                android:imeOptions="actionNext"
                android:nextFocusDown="@id/inputLatitude"
                tools:text="Building description" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.flaringapp.coursework2021.presentation.utils.betterlinearlayout.BetterLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:bll_children_spacing="12dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputLayout.Stroke"
                android:id="@+id/layoutInputLatitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_building_latitude"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Input.InLayout.Stroke"
                    android:id="@+id/inputLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal|numberSigned"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/inputLongitude" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/InputLayout.Stroke"
                android:id="@+id/layoutInputLongitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_building_longitude"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/Input.InLayout.Stroke"
                    android:id="@+id/inputLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal|numberSigned"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@id/inputAddress" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.flaringapp.coursework2021.presentation.utils.betterlinearlayout.BetterLinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.Stroke"
            android:id="@+id/layoutInputAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_building_address"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Input.InLayout.Stroke"
                android:id="@+id/inputAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:nextFocusDown="@id/inputArea" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/InputLayout.Stroke"
            android:id="@+id/layoutInputArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_building_area"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/Input.InLayout.Stroke"
                android:id="@+id/inputArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"
                android:imeOptions="actionDone"
                tools:text="412 m2" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layoutSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:gravity="center_horizontal"
                android:paddingTop="16dp"
                android:paddingBottom="24dp"
                android:clipToPadding="false">

                <Button
                    style="@style/Button"
                    android:id="@+id/buttonSubmit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/submit" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>